==> hydarealman/mystudy/stm32project/11-2硬件SPI读取W25Q64/Hardware/MySPI.c <==
#include "stm32f10x.h"                  // Device header

void MySPI_W_SS(uint8_t BitValue) {
	GPIO_WriteBit(GPIOA,GPIO_Pin_4,BitValue);
	
}

void MySPI_W_SCK(uint8_t BitValue) {
	GPIO_WriteBit(GPIOA,GPIO_Pin_5,BitValue);
	
}

void MySPI_W_MOSI(uint8_t BitValue) {
	GPIO_WriteBit(GPIOA,GPIO_Pin_7,BitValue);
}

uint8_t MySPI_R_MISO(void) {
	return GPIO_ReadInputDataBit(GPIOA,GPIO_Pin_6);
}

void MySPI_Init(void) {
	/*开启时钟*/
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
	
	/*GPIO初始化*/
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);

	MySPI_W_SS(1);
	MySPI_W_SCK(0);
}

void MySPI_Start(void) {
	MySPI_W_SS(0);
}

void MySPI_Stop(void) {
	MySPI_W_SS(1);
}

uint8_t MYSPI_SwapByte(uint8_t ByteSend) {
	uint8_t i, ByteReceive = 0x00;
	
	// 模式0
	for (i = 0; i < 8; i++) {
		MySPI_W_MOSI(ByteSend & (0x80 >> i));
		MySPI_W_SCK(1);
		if  (MySPI_R_MISO() == 1) {ByteReceive |= (0x80 >> i);}
		MySPI_W_SCK(0);
	}	
	
////// 模式1
//	for (i = 0; i < 8; i++) {
//		MySPI_W_SCK(1);
//		MySPI_W_MOSI(ByteSend & (0x80 >> i));
//		MySPI_W_SCK(0);
//		if  (MySPI_R_MISO() == 1) {ByteReceive |= (0x80 >> i);}
//	}	
	
	// 模式2
	// 所有sck0 变 1  1 变 0
	
	// 模式3
	// 极性相反0 变 1 1 变 0
	
	
	
	return ByteReceive;
}

//uint8_t MYSPI_SwapByte(uint8_t ByteSend) {
//	uint8_t i;
//	for (i = 0; i < 8; i++) {
//		MySPI_W_MOSI(ByteSend & 0x80);
//		ByteSend <<= 1;
//		MySPI_W_SCK(1);
//		if  (MySPI_R_MISO() == 1) {ByteSend |= 0x01;}
//		MySPI_W_SCK(0);
//	}	
//	
//	return ByteSend;
//}
